sorted/tests/12-pattern-ident-with-subpattern.stderr
error: 0 should sort before `ref num @ 1`
 --> tests/12-pattern-ident-with-subpattern.rs:8:9
  |
8 |         0 => println!("0"),
  |         ^
